--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kamensec</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-99E5ZVCJMT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-99E5ZVCJMT');
+    </script>
   </head>
   <body>
     <div id="root"></div>
